--- a/app/public/css/cg.css
+++ b/app/public/css/cg.css
@@ -13,13 +13,39 @@ body {
     font-family: 'Montserrat', sans-serif;
     background:transparent;                          /* The HTML consumer actually makes your background transparent by default, unless a color or image is specified - but this might be usefull when debugging in browsers */
     overflow:hidden;                                 /* Hide any overflowing elements - to disable scollbars */
-    -webkit-font-smoothing:antialiased !important;   
+    -webkit-font-smoothing:antialiased !important;
 }
 
 
 h1, h2, h3, h4 {
     margin:0;
     padding:0;
+}
+
+/**************************************************/
+/*              [Page Center]                     */
+/**************************************************/
+
+body, html, .wrapper { 
+  width: 100%;
+  height: 100%
+}
+
+.wrapper {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  -webkit-box-flex-direction: row;
+  -moz-box-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  height:100%;
+}
+
+.center-page {
+  margin: auto;
+  width: 600px;
 }
 
 /**************************************************/
