Added Bug & Logo assets

--- a/app/public/css/default.less
+++ b/app/public/css/default.less
@@ -98,3 +98,40 @@
         margin-bottom: 5px;
     } 
  }
+
+ /**************************************************/
+/*              [Live Bug]                        */
+/**************************************************/
+.bug {
+    display:inline;
+    white-space: nowrap;
+    clear:none;
+
+    h1 {
+        color: @primary;
+        text-shadow:1px -1px 0px #000;
+        font-size: 25px;
+        font-size: 1.3vw;
+        font-weight: normal;
+        display:inline;
+        padding: 5px;
+        margin-right: 0px;
+
+        background-color: @primary-bg;
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+    }
+
+    .black {
+        background-color: #000 !important;
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+    }
+}
+
+/**************************************************/
+/*              [Logo]                            */
+/**************************************************/
+
+.logo {
+    opacity: 0.5;
+    top: 40px;
+}
