--- a/app/public/css/default.less
+++ b/app/public/css/default.less
@@ -8,6 +8,8 @@
 @secondry:     #fff;
 @secondry-bg:  #000;
 
+@gradient: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+
 /*
  *===================================
  *         Lower Thirds
@@ -18,6 +20,7 @@
     min-width: 30%;
     width: 40%;
     border-radius: 5px;
+    border-left: 6px solid #fff;
 
     h1 {
         color:  @primary;
@@ -28,7 +31,7 @@
         padding: 5px;
 
         background-color: @primary-bg;
-        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+        background-image: @gradient;
     }
 
     h2 {
@@ -38,7 +41,7 @@
         padding: 5px;
 
         background-color: @secondry-bg;
-        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+        background-image: @gradient;
     }
 }
 /*
@@ -66,7 +69,7 @@
         padding: 5px;
 
         background-color: @primary-bg;
-        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+        background-image: @gradient;
     }
 
     .name, .time {
@@ -74,7 +77,7 @@
         line-height: 40px;
         padding-left: 5px;
         background-color: #4B0082;
-        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+        background-image: @gradient;
         font-size: 25px;
     }
 
@@ -102,6 +105,7 @@
  /**************************************************/
 /*              [Live Bug]                        */
 /**************************************************/
+
 .bug {
     display:inline;
     white-space: nowrap;
@@ -116,14 +120,36 @@
         display:inline;
         padding: 5px;
         margin-right: 0px;
+    }
 
+    .live {
+        border-left: 2px solid #fff;
         background-color: @primary-bg;
-        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+        -webkit-animation: pulse-color 5s infinite;
+        background-image: @gradient;
     }
 
     .black {
-        background-color: #000 !important;
-        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+        background-color: #000;
+        background-image: @gradient;
+    }
+}
+
+//CSS pulsate live colour
+@-webkit-keyframes pulse-color {
+    0% { 
+        background-color: lighten(@primary-bg, 7.5%);
+        background-image: @gradient;
+    }
+
+    50% { 
+        background: darken(@primary-bg, 3.5%);
+        background-image: @gradient;
+    }
+
+    100% {
+        background: lighten(@primary-bg, 7.5%);
+        background-image: @gradient;
     }
 }
 
