--- a/app/public/css/default.less
+++ b/app/public/css/default.less
@@ -9,7 +9,29 @@
 @secondry-bg:  #000;
 
 @gradient: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+/*
+ *===================================
+ *         Crawler
+ *===================================
+ */
 
+.crawler {
+    width: 100%;
+    border-radius: 5px;
+    border-left: 6px solid #fff;
+
+    .marquee {
+        color:  @primary;
+        text-shadow:1px -1px 0px #000;
+        font-size: 40px;
+        //font-size: 2.5vw;
+        font-weight: normal;
+        padding: 5px;
+
+        background-color: @primary-bg;
+        background-image: @gradient;
+    }
+}
 /*
  *===================================
  *         Lower Thirds
@@ -55,7 +77,7 @@
     width: 650px;
     text-align: center;
 
-    border-radius: 5px; 
+    border-radius: 5px;
     border: 8px solid rgba(0, 0, 0, 0.4);
     background: rgba(0, 0, 0, 0.4);
     background-clip: padding-box;
@@ -87,19 +109,19 @@
         width: 498px;
     }
 
-    .time { 
+    .time {
         width: 130px;
         margin-left: 5px;
     }
 
-    .row {       
+    .row {
         color: #fff;
         margin-top: 5px;
     }
 
     .row:last-child {
         margin-bottom: 5px;
-    } 
+    }
  }
 
  /**************************************************/
@@ -135,12 +157,12 @@
 
 //CSS pulsate live colour
 @-webkit-keyframes pulse-color {
-    0% { 
+    0% {
         background-color: lighten(@primary-bg, 7.5%);
         background-image: @gradient;
     }
 
-    50% { 
+    50% {
         background: darken(@primary-bg, 3.5%);
         background-image: @gradient;
     }
