Tweet functionality added. Jquery marquee library in use. Crawler now broken.

--- a/app/public/css/cg.css
+++ b/app/public/css/cg.css
@@ -56,6 +56,11 @@ body, html, .wrapper {
     left: 50px;
 }
 
+.rock-left{
+    position: absolute;
+    left: 0px;
+}
+
 .right {
     position: absolute;
     right: 50px;
