--- a/app/public/css/default.less
+++ b/app/public/css/default.less
@@ -17,19 +17,23 @@
 
 .crawler {
     width: 100%;
-    border-radius: 5px;
-    border-left: 6px solid #fff;
+    height:55px;
+
+    background-color: @primary-bg;
+    background-image: @gradient;
 
     .marquee {
-        color:  @primary;
-        text-shadow:1px -1px 0px #000;
-        font-size: 40px;
-        //font-size: 2.5vw;
-        font-weight: normal;
-        padding: 5px;
+      overflow: hidden;
 
-        background-color: @primary-bg;
-        background-image: @gradient;
+      width: 100%;
+
+      color:  @primary;
+      text-shadow:1px -1px 0px #000;
+      font-size: 40px;
+      //font-size: 2.5vw;
+      font-weight: normal;
+
+      padding: 5px
     }
 }
 /*
