--- a/app/public/css/default.less
+++ b/app/public/css/default.less
@@ -3,8 +3,8 @@
  */
 
 
-@primary:      #fff;
-@primary-bg:   #cd1d18;
+@primary:      #ffffff;
+@primary-bg:   #006088;
 @secondry:     #fff;
 @secondry-bg:  #000;
 
