--- a/app/public/css/animation.css
+++ b/app/public/css/animation.css
@@ -2,7 +2,7 @@
 /* Mixins
 /* ------------------------------------------- */
 /* ------------------------------------------- */
-/* Toggle Fade  
+/* Toggle Fade
 /* ------------------------------------------- */
 /* line 64, ../sass/ng-animation.scss */
 .toggle {
@@ -62,7 +62,7 @@
 }
 
 /* ------------------------------------------- */
-/* Slide Top 
+/* Slide Top
 /* ------------------------------------------- */
 /* line 109, ../sass/ng-animation.scss */
 .slide-top {
@@ -146,7 +146,7 @@
 }
 
 /* ------------------------------------------- */
-/* Slide Rigth 
+/* Slide Rigth
 /* ------------------------------------------- */
 /* line 163, ../sass/ng-animation.scss */
 .slide-right {
@@ -230,7 +230,7 @@
 }
 
 /* ------------------------------------------- */
-/* Slide Left 
+/* Slide Left
 /* ------------------------------------------- */
 /* line 217, ../sass/ng-animation.scss */
 .slide-left {
@@ -398,7 +398,7 @@
 }
 
 /* ------------------------------------------- */
-/* Bouncy Slide Top 
+/* Bouncy Slide Top
 /* ------------------------------------------- */
 /* line 325, ../sass/ng-animation.scss */
 .bouncy-slide-top {
@@ -486,7 +486,7 @@
 }
 
 /* ------------------------------------------- */
-/* Bouncy Slide Rigth 
+/* Bouncy Slide Rigth
 /* ------------------------------------------- */
 /* line 379, ../sass/ng-animation.scss */
 .bouncy-slide-right {
@@ -574,7 +574,7 @@
 }
 
 /* ------------------------------------------- */
-/* Bouncy Slide Left 
+/* Bouncy Slide Left
 /* ------------------------------------------- */
 /* line 434, ../sass/ng-animation.scss */
 .bouncy-slide-left {
@@ -750,7 +750,7 @@
 }
 
 /* ------------------------------------------- */
-/* Scale Fade 
+/* Scale Fade
 /* ------------------------------------------- */
 /* line 544, ../sass/ng-animation.scss */
 .scale-fade {
@@ -834,7 +834,7 @@
 }
 
 /* ------------------------------------------- */
-/* Spin Fade 
+/* Spin Fade
 /* ------------------------------------------- */
 /* line 598, ../sass/ng-animation.scss */
 .spin-toggle {
@@ -918,7 +918,7 @@
 }
 
 /* ------------------------------------------- */
-/* Scale in Fade 
+/* Scale in Fade
 /* ------------------------------------------- */
 /* line 653, ../sass/ng-animation.scss */
 .scale-fade-in {
@@ -1002,7 +1002,7 @@
 }
 
 /* ------------------------------------------- */
-/* Bouncy Scale in Fade 
+/* Bouncy Scale in Fade
 /* ------------------------------------------- */
 /* line 708, ../sass/ng-animation.scss */
 .bouncy-scale-in {
@@ -1090,7 +1090,7 @@
 }
 
 /* ------------------------------------------- */
-/* Flip In 
+/* Flip In
 /* ------------------------------------------- */
 /* line 763, ../sass/ng-animation.scss */
 .flip-in {
@@ -1174,7 +1174,7 @@
 }
 
 /* ------------------------------------------- */
-/* Rotate In 
+/* Rotate In
 /* ------------------------------------------- */
 /* line 817, ../sass/ng-animation.scss */
 .rotate-in {
@@ -1304,4 +1304,60 @@
      must be set to 0 to avoid an accidental CSS inheritance */
     -webkit-transition-duration: 0s;
     transition-duration: 0s;
+}
+
+.scroll-left {
+  height: 50px;
+  overflow: hidden;
+  position: relative;
+  background: yellow;
+  color: orange;
+  border: 1px solid white;
+
+  background-color: #006088;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.12) 51%, rgba(0, 0, 0, 0.04));
+}
+
+.scroll-left p {
+  position: absolute;
+  width: auto;
+  white-space: nowrap;
+  height: 100%;
+  margin: 0;
+  line-height: 50px;
+  text-align: center;
+  color: #ffffff;
+  color:  @primary;
+  text-shadow:1px -1px 0px #000;
+  font-size: 40px;
+  font-weight: normal;
+  /* Starting position */
+  -moz-transform:translateX(100%);
+  -webkit-transform:translateX(100%);
+  transform:translateX(100%);
+  /* Apply animation to this element */
+  -moz-animation: scroll-left 30s linear infinite;
+  -webkit-animation: scroll-left 30s linear infinite;
+  animation: scroll-left 30s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes scroll-left {
+  0%   { -moz-transform: translateX(1280px); }
+  100% { -moz-transform: translateX(-100%); }
+}
+@-webkit-keyframes scroll-left {
+  0%   { -webkit-transform: translateX(1280px); }
+  100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes scroll-left {
+  0%   {
+    -moz-transform: translateX(1280px); /* Browser bug fix */
+    -webkit-transform: translateX(1280px); /* Browser bug fix */
+    transform: translateX(1280px);
+  }
+  100% {
+    -moz-transform: translateX(-100%); /* Browser bug fix */
+    -webkit-transform: translateX(-100%); /* Browser bug fix */
+    transform: translateX(-100%);
+  }
 }
