--- a/app/public/css/cg.css
+++ b/app/public/css/cg.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    padding: 50px; /* Safe area */
+    padding-bottom: 50px; /* Safe area */
     font-family: 'Montserrat', sans-serif;
     background:transparent;                          /* The HTML consumer actually makes your background transparent by default, unless a color or image is specified - but this might be usefull when debugging in browsers */
     overflow:hidden;                                 /* Hide any overflowing elements - to disable scollbars */
